[package]
name = "cpu-usage-logger"
description = "CPU Usage Logger is a simple utility program that logs high CPU usage and tracks the CPU usage of processes on your system."
authors = ["Rubin Raithel (@Coronon)"]
homepage = "https://github.com/Coronon/cpu-usage-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
clearscreen = "2.0.0"
sysinfo = "0.28.2"

[build-dependencies]
embed-manifest = "1.3.1"
